adding bid apis
